parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Model
Rule 1     empty -> <empty>
Rule 2     Identifier -> IDENTIFIER
Rule 3     ClassIdentifier -> IDENTIFIER
Rule 4     BlockIdentifier -> IDENTIFIER
Rule 5     EventPath -> IDENTIFIER POINT IDENTIFIER
Rule 6     AndCommercialEvenPathStar -> empty
Rule 7     AndCommercialEvenPathStar -> ANDCOMMERCIAL EventPath AndCommercialEvenPathStar
Rule 8     MacroEventDefinition -> EventIdentifierInSynchronization DEUXPOINTS EventPath AndCommercialEvenPathStar
Rule 9     EventIdentifierInSynchronization -> IDENTIFIER
Rule 10    Synchronization -> MacroEventDefinition
Rule 11    SynchronizationStar -> empty
Rule 12    SynchronizationStar -> Synchronization SynchronizationStar
Rule 13    SynchronizationClause -> SYNCHRONIZATION SynchronizationStar
Rule 14    ClassNameIdentifier -> IDENTIFIER
Rule 15    ClassInstanceIdentifier -> IDENTIFIER
Rule 16    ClassInstanceVirguleIdentifierStar -> empty
Rule 17    ClassInstanceVirguleIdentifierStar -> VIRGULE ClassInstanceIdentifier ClassInstanceVirguleIdentifierStar
Rule 18    ClassInstance -> ClassNameIdentifier ClassInstanceIdentifier ClassInstanceVirguleIdentifierStar
Rule 19    ComposedBlockClause -> Block
Rule 20    ComposedBlockClause -> ClassInstance
Rule 21    ComposedBlockClause -> Block ComposedBlockClause
Rule 22    ComposedBlockClause -> ClassInstance ComposedBlockClause
Rule 23    StateIdentifier -> IDENTIFIER
Rule 24    Transition -> EventIdentifierInTransition DEUXPOINTS OriginalStateIdentifierInTransition FLECHE DestStateIdentifierInTransition
Rule 25    OriginalStateIdentifierInTransition -> IDENTIFIER
Rule 26    DestStateIdentifierInTransition -> IDENTIFIER
Rule 27    EventIdentifierInTransition -> IDENTIFIER
Rule 28    TransitionStar -> empty
Rule 29    TransitionStar -> Transition TransitionStar
Rule 30    TransitionClause -> TRANSITION TransitionStar
Rule 31    EventClauseInClass -> EVENT EventIdentifierInClass EventVirguleIdentifierStarInClass
Rule 32    EventIdentifierInClass -> IDENTIFIER
Rule 33    EventClauseInBlock -> EVENT EventIdentifierInBlock EventVirguleIdentifierStarInBlock
Rule 34    EventVirguleIdentifierStarInBlock -> empty
Rule 35    EventVirguleIdentifierStarInBlock -> VIRGULE EventIdentifierInBlock EventVirguleIdentifierStarInBlock
Rule 36    EventIdentifierInBlock -> IDENTIFIER
Rule 37    StateClause -> STATE StateIdentifier StateVirguleIdentifierStar
Rule 38    EventVirguleIdentifierStarInClass -> empty
Rule 39    EventVirguleIdentifierStarInClass -> VIRGULE EventIdentifierInClass EventVirguleIdentifierStarInClass
Rule 40    StateVirguleIdentifierStar -> empty
Rule 41    StateVirguleIdentifierStar -> VIRGULE StateIdentifier StateVirguleIdentifierStar
Rule 42    ObserverStar -> empty
Rule 43    ObserverClauseQuestionMark -> empty
Rule 44    ObserverClauseQuestionMark -> OBSERVER ObserverStar
Rule 45    InternalBlockBody -> ComposedBlockClause EventClauseInBlock SynchronizationClause ObserverClauseQuestionMark
Rule 46    BasicBlockBody -> StateClause EventClauseInClass TransitionClause ObserverClauseQuestionMark
Rule 47    BlockBody -> BasicBlockBody
Rule 48    BlockBody -> InternalBlockBody
Rule 49    EndBlock -> END
Rule 50    EndClass -> END
Rule 51    Class -> CLASS ClassIdentifier BlockBody EndClass
Rule 52    Block -> BLOCK BlockIdentifier BlockBody EndBlock
Rule 53    Model -> Block Model
Rule 54    Model -> Class Model
Rule 55    Model -> empty

Terminals, with rules where they appear

ANDCOMMERCIAL        : 7
BLOCK                : 52
CLASS                : 51
DEUXPOINTS           : 8 24
END                  : 49 50
EVENT                : 31 33
FLECHE               : 24
IDENTIFIER           : 2 3 4 5 5 9 14 15 23 25 26 27 32 36
OBSERVER             : 44
POINT                : 5
STATE                : 37
SYNCHRONIZATION      : 13
TRANSITION           : 30
VIRGULE              : 17 35 39 41
error                : 

Nonterminals, with rules where they appear

AndCommercialEvenPathStar : 7 8
BasicBlockBody       : 47
Block                : 19 21 53
BlockBody            : 51 52
BlockIdentifier      : 52
Class                : 54
ClassIdentifier      : 51
ClassInstance        : 20 22
ClassInstanceIdentifier : 17 18
ClassInstanceVirguleIdentifierStar : 17 18
ClassNameIdentifier  : 18
ComposedBlockClause  : 21 22 45
DestStateIdentifierInTransition : 24
EndBlock             : 52
EndClass             : 51
EventClauseInBlock   : 45
EventClauseInClass   : 46
EventIdentifierInBlock : 33 35
EventIdentifierInClass : 31 39
EventIdentifierInSynchronization : 8
EventIdentifierInTransition : 24
EventPath            : 7 8
EventVirguleIdentifierStarInBlock : 33 35
EventVirguleIdentifierStarInClass : 31 39
Identifier           : 
InternalBlockBody    : 48
MacroEventDefinition : 10
Model                : 53 54 0
ObserverClauseQuestionMark : 45 46
ObserverStar         : 44
OriginalStateIdentifierInTransition : 24
StateClause          : 46
StateIdentifier      : 37 41
StateVirguleIdentifierStar : 37 41
Synchronization      : 12
SynchronizationClause : 45
SynchronizationStar  : 12 13
Transition           : 29
TransitionClause     : 46
TransitionStar       : 29 30
empty                : 6 11 16 28 34 38 40 42 43 55

Parsing method: LALR

state 0

    (0) S' -> . Model
    (53) Model -> . Block Model
    (54) Model -> . Class Model
    (55) Model -> . empty
    (52) Block -> . BLOCK BlockIdentifier BlockBody EndBlock
    (51) Class -> . CLASS ClassIdentifier BlockBody EndClass
    (1) empty -> .

    BLOCK           shift and go to state 2
    CLASS           shift and go to state 3
    $end            reduce using rule 1 (empty -> .)

    Block                          shift and go to state 1
    Model                          shift and go to state 4
    Class                          shift and go to state 5
    empty                          shift and go to state 6

state 1

    (53) Model -> Block . Model
    (53) Model -> . Block Model
    (54) Model -> . Class Model
    (55) Model -> . empty
    (52) Block -> . BLOCK BlockIdentifier BlockBody EndBlock
    (51) Class -> . CLASS ClassIdentifier BlockBody EndClass
    (1) empty -> .

    BLOCK           shift and go to state 2
    CLASS           shift and go to state 3
    $end            reduce using rule 1 (empty -> .)

    Block                          shift and go to state 1
    Model                          shift and go to state 7
    Class                          shift and go to state 5
    empty                          shift and go to state 6

state 2

    (52) Block -> BLOCK . BlockIdentifier BlockBody EndBlock
    (4) BlockIdentifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 9

    BlockIdentifier                shift and go to state 8

state 3

    (51) Class -> CLASS . ClassIdentifier BlockBody EndClass
    (3) ClassIdentifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 10

    ClassIdentifier                shift and go to state 11

state 4

    (0) S' -> Model .



state 5

    (54) Model -> Class . Model
    (53) Model -> . Block Model
    (54) Model -> . Class Model
    (55) Model -> . empty
    (52) Block -> . BLOCK BlockIdentifier BlockBody EndBlock
    (51) Class -> . CLASS ClassIdentifier BlockBody EndClass
    (1) empty -> .

    BLOCK           shift and go to state 2
    CLASS           shift and go to state 3
    $end            reduce using rule 1 (empty -> .)

    Block                          shift and go to state 1
    Model                          shift and go to state 12
    Class                          shift and go to state 5
    empty                          shift and go to state 6

state 6

    (55) Model -> empty .

    $end            reduce using rule 55 (Model -> empty .)


state 7

    (53) Model -> Block Model .

    $end            reduce using rule 53 (Model -> Block Model .)


state 8

    (52) Block -> BLOCK BlockIdentifier . BlockBody EndBlock
    (47) BlockBody -> . BasicBlockBody
    (48) BlockBody -> . InternalBlockBody
    (46) BasicBlockBody -> . StateClause EventClauseInClass TransitionClause ObserverClauseQuestionMark
    (45) InternalBlockBody -> . ComposedBlockClause EventClauseInBlock SynchronizationClause ObserverClauseQuestionMark
    (37) StateClause -> . STATE StateIdentifier StateVirguleIdentifierStar
    (19) ComposedBlockClause -> . Block
    (20) ComposedBlockClause -> . ClassInstance
    (21) ComposedBlockClause -> . Block ComposedBlockClause
    (22) ComposedBlockClause -> . ClassInstance ComposedBlockClause
    (52) Block -> . BLOCK BlockIdentifier BlockBody EndBlock
    (18) ClassInstance -> . ClassNameIdentifier ClassInstanceIdentifier ClassInstanceVirguleIdentifierStar
    (14) ClassNameIdentifier -> . IDENTIFIER

    STATE           shift and go to state 15
    BLOCK           shift and go to state 2
    IDENTIFIER      shift and go to state 17

    ComposedBlockClause            shift and go to state 13
    Block                          shift and go to state 20
    StateClause                    shift and go to state 14
    BasicBlockBody                 shift and go to state 19
    ClassInstance                  shift and go to state 21
    InternalBlockBody              shift and go to state 22
    ClassNameIdentifier            shift and go to state 16
    BlockBody                      shift and go to state 18

state 9

    (4) BlockIdentifier -> IDENTIFIER .

    STATE           reduce using rule 4 (BlockIdentifier -> IDENTIFIER .)
    BLOCK           reduce using rule 4 (BlockIdentifier -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 4 (BlockIdentifier -> IDENTIFIER .)


state 10

    (3) ClassIdentifier -> IDENTIFIER .

    STATE           reduce using rule 3 (ClassIdentifier -> IDENTIFIER .)
    BLOCK           reduce using rule 3 (ClassIdentifier -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 3 (ClassIdentifier -> IDENTIFIER .)


state 11

    (51) Class -> CLASS ClassIdentifier . BlockBody EndClass
    (47) BlockBody -> . BasicBlockBody
    (48) BlockBody -> . InternalBlockBody
    (46) BasicBlockBody -> . StateClause EventClauseInClass TransitionClause ObserverClauseQuestionMark
    (45) InternalBlockBody -> . ComposedBlockClause EventClauseInBlock SynchronizationClause ObserverClauseQuestionMark
    (37) StateClause -> . STATE StateIdentifier StateVirguleIdentifierStar
    (19) ComposedBlockClause -> . Block
    (20) ComposedBlockClause -> . ClassInstance
    (21) ComposedBlockClause -> . Block ComposedBlockClause
    (22) ComposedBlockClause -> . ClassInstance ComposedBlockClause
    (52) Block -> . BLOCK BlockIdentifier BlockBody EndBlock
    (18) ClassInstance -> . ClassNameIdentifier ClassInstanceIdentifier ClassInstanceVirguleIdentifierStar
    (14) ClassNameIdentifier -> . IDENTIFIER

    STATE           shift and go to state 15
    BLOCK           shift and go to state 2
    IDENTIFIER      shift and go to state 17

    ComposedBlockClause            shift and go to state 13
    Block                          shift and go to state 20
    StateClause                    shift and go to state 14
    BasicBlockBody                 shift and go to state 19
    ClassInstance                  shift and go to state 21
    InternalBlockBody              shift and go to state 22
    ClassNameIdentifier            shift and go to state 16
    BlockBody                      shift and go to state 23

state 12

    (54) Model -> Class Model .

    $end            reduce using rule 54 (Model -> Class Model .)


state 13

    (45) InternalBlockBody -> ComposedBlockClause . EventClauseInBlock SynchronizationClause ObserverClauseQuestionMark
    (33) EventClauseInBlock -> . EVENT EventIdentifierInBlock EventVirguleIdentifierStarInBlock

    EVENT           shift and go to state 25

    EventClauseInBlock             shift and go to state 24

state 14

    (46) BasicBlockBody -> StateClause . EventClauseInClass TransitionClause ObserverClauseQuestionMark
    (31) EventClauseInClass -> . EVENT EventIdentifierInClass EventVirguleIdentifierStarInClass

    EVENT           shift and go to state 27

    EventClauseInClass             shift and go to state 26

state 15

    (37) StateClause -> STATE . StateIdentifier StateVirguleIdentifierStar
    (23) StateIdentifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 28

    StateIdentifier                shift and go to state 29

state 16

    (18) ClassInstance -> ClassNameIdentifier . ClassInstanceIdentifier ClassInstanceVirguleIdentifierStar
    (15) ClassInstanceIdentifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 31

    ClassInstanceIdentifier        shift and go to state 30

state 17

    (14) ClassNameIdentifier -> IDENTIFIER .

    IDENTIFIER      reduce using rule 14 (ClassNameIdentifier -> IDENTIFIER .)


state 18

    (52) Block -> BLOCK BlockIdentifier BlockBody . EndBlock
    (49) EndBlock -> . END

    END             shift and go to state 32

    EndBlock                       shift and go to state 33

state 19

    (47) BlockBody -> BasicBlockBody .

    END             reduce using rule 47 (BlockBody -> BasicBlockBody .)


state 20

    (19) ComposedBlockClause -> Block .
    (21) ComposedBlockClause -> Block . ComposedBlockClause
    (19) ComposedBlockClause -> . Block
    (20) ComposedBlockClause -> . ClassInstance
    (21) ComposedBlockClause -> . Block ComposedBlockClause
    (22) ComposedBlockClause -> . ClassInstance ComposedBlockClause
    (52) Block -> . BLOCK BlockIdentifier BlockBody EndBlock
    (18) ClassInstance -> . ClassNameIdentifier ClassInstanceIdentifier ClassInstanceVirguleIdentifierStar
    (14) ClassNameIdentifier -> . IDENTIFIER

    EVENT           reduce using rule 19 (ComposedBlockClause -> Block .)
    BLOCK           shift and go to state 2
    IDENTIFIER      shift and go to state 17

    Block                          shift and go to state 20
    ClassInstance                  shift and go to state 21
    ClassNameIdentifier            shift and go to state 16
    ComposedBlockClause            shift and go to state 34

state 21

    (20) ComposedBlockClause -> ClassInstance .
    (22) ComposedBlockClause -> ClassInstance . ComposedBlockClause
    (19) ComposedBlockClause -> . Block
    (20) ComposedBlockClause -> . ClassInstance
    (21) ComposedBlockClause -> . Block ComposedBlockClause
    (22) ComposedBlockClause -> . ClassInstance ComposedBlockClause
    (52) Block -> . BLOCK BlockIdentifier BlockBody EndBlock
    (18) ClassInstance -> . ClassNameIdentifier ClassInstanceIdentifier ClassInstanceVirguleIdentifierStar
    (14) ClassNameIdentifier -> . IDENTIFIER

    EVENT           reduce using rule 20 (ComposedBlockClause -> ClassInstance .)
    BLOCK           shift and go to state 2
    IDENTIFIER      shift and go to state 17

    ComposedBlockClause            shift and go to state 35
    ClassInstance                  shift and go to state 21
    ClassNameIdentifier            shift and go to state 16
    Block                          shift and go to state 20

state 22

    (48) BlockBody -> InternalBlockBody .

    END             reduce using rule 48 (BlockBody -> InternalBlockBody .)


state 23

    (51) Class -> CLASS ClassIdentifier BlockBody . EndClass
    (50) EndClass -> . END

    END             shift and go to state 36

    EndClass                       shift and go to state 37

state 24

    (45) InternalBlockBody -> ComposedBlockClause EventClauseInBlock . SynchronizationClause ObserverClauseQuestionMark
    (13) SynchronizationClause -> . SYNCHRONIZATION SynchronizationStar

    SYNCHRONIZATION shift and go to state 39

    SynchronizationClause          shift and go to state 38

state 25

    (33) EventClauseInBlock -> EVENT . EventIdentifierInBlock EventVirguleIdentifierStarInBlock
    (36) EventIdentifierInBlock -> . IDENTIFIER

    IDENTIFIER      shift and go to state 40

    EventIdentifierInBlock         shift and go to state 41

state 26

    (46) BasicBlockBody -> StateClause EventClauseInClass . TransitionClause ObserverClauseQuestionMark
    (30) TransitionClause -> . TRANSITION TransitionStar

    TRANSITION      shift and go to state 42

    TransitionClause               shift and go to state 43

state 27

    (31) EventClauseInClass -> EVENT . EventIdentifierInClass EventVirguleIdentifierStarInClass
    (32) EventIdentifierInClass -> . IDENTIFIER

    IDENTIFIER      shift and go to state 44

    EventIdentifierInClass         shift and go to state 45

state 28

    (23) StateIdentifier -> IDENTIFIER .

    VIRGULE         reduce using rule 23 (StateIdentifier -> IDENTIFIER .)
    EVENT           reduce using rule 23 (StateIdentifier -> IDENTIFIER .)


state 29

    (37) StateClause -> STATE StateIdentifier . StateVirguleIdentifierStar
    (40) StateVirguleIdentifierStar -> . empty
    (41) StateVirguleIdentifierStar -> . VIRGULE StateIdentifier StateVirguleIdentifierStar
    (1) empty -> .

    VIRGULE         shift and go to state 46
    EVENT           reduce using rule 1 (empty -> .)

    empty                          shift and go to state 47
    StateVirguleIdentifierStar     shift and go to state 48

state 30

    (18) ClassInstance -> ClassNameIdentifier ClassInstanceIdentifier . ClassInstanceVirguleIdentifierStar
    (16) ClassInstanceVirguleIdentifierStar -> . empty
    (17) ClassInstanceVirguleIdentifierStar -> . VIRGULE ClassInstanceIdentifier ClassInstanceVirguleIdentifierStar
    (1) empty -> .

    VIRGULE         shift and go to state 49
    BLOCK           reduce using rule 1 (empty -> .)
    IDENTIFIER      reduce using rule 1 (empty -> .)
    EVENT           reduce using rule 1 (empty -> .)

    empty                          shift and go to state 50
    ClassInstanceVirguleIdentifierStar shift and go to state 51

state 31

    (15) ClassInstanceIdentifier -> IDENTIFIER .

    VIRGULE         reduce using rule 15 (ClassInstanceIdentifier -> IDENTIFIER .)
    BLOCK           reduce using rule 15 (ClassInstanceIdentifier -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 15 (ClassInstanceIdentifier -> IDENTIFIER .)
    EVENT           reduce using rule 15 (ClassInstanceIdentifier -> IDENTIFIER .)


state 32

    (49) EndBlock -> END .

    BLOCK           reduce using rule 49 (EndBlock -> END .)
    CLASS           reduce using rule 49 (EndBlock -> END .)
    $end            reduce using rule 49 (EndBlock -> END .)
    IDENTIFIER      reduce using rule 49 (EndBlock -> END .)
    EVENT           reduce using rule 49 (EndBlock -> END .)


state 33

    (52) Block -> BLOCK BlockIdentifier BlockBody EndBlock .

    BLOCK           reduce using rule 52 (Block -> BLOCK BlockIdentifier BlockBody EndBlock .)
    IDENTIFIER      reduce using rule 52 (Block -> BLOCK BlockIdentifier BlockBody EndBlock .)
    EVENT           reduce using rule 52 (Block -> BLOCK BlockIdentifier BlockBody EndBlock .)
    CLASS           reduce using rule 52 (Block -> BLOCK BlockIdentifier BlockBody EndBlock .)
    $end            reduce using rule 52 (Block -> BLOCK BlockIdentifier BlockBody EndBlock .)


state 34

    (21) ComposedBlockClause -> Block ComposedBlockClause .

    EVENT           reduce using rule 21 (ComposedBlockClause -> Block ComposedBlockClause .)


state 35

    (22) ComposedBlockClause -> ClassInstance ComposedBlockClause .

    EVENT           reduce using rule 22 (ComposedBlockClause -> ClassInstance ComposedBlockClause .)


state 36

    (50) EndClass -> END .

    BLOCK           reduce using rule 50 (EndClass -> END .)
    CLASS           reduce using rule 50 (EndClass -> END .)
    $end            reduce using rule 50 (EndClass -> END .)


state 37

    (51) Class -> CLASS ClassIdentifier BlockBody EndClass .

    BLOCK           reduce using rule 51 (Class -> CLASS ClassIdentifier BlockBody EndClass .)
    CLASS           reduce using rule 51 (Class -> CLASS ClassIdentifier BlockBody EndClass .)
    $end            reduce using rule 51 (Class -> CLASS ClassIdentifier BlockBody EndClass .)


state 38

    (45) InternalBlockBody -> ComposedBlockClause EventClauseInBlock SynchronizationClause . ObserverClauseQuestionMark
    (43) ObserverClauseQuestionMark -> . empty
    (44) ObserverClauseQuestionMark -> . OBSERVER ObserverStar
    (1) empty -> .

    OBSERVER        shift and go to state 52
    END             reduce using rule 1 (empty -> .)

    empty                          shift and go to state 53
    ObserverClauseQuestionMark     shift and go to state 54

state 39

    (13) SynchronizationClause -> SYNCHRONIZATION . SynchronizationStar
    (11) SynchronizationStar -> . empty
    (12) SynchronizationStar -> . Synchronization SynchronizationStar
    (1) empty -> .
    (10) Synchronization -> . MacroEventDefinition
    (8) MacroEventDefinition -> . EventIdentifierInSynchronization DEUXPOINTS EventPath AndCommercialEvenPathStar
    (9) EventIdentifierInSynchronization -> . IDENTIFIER

    OBSERVER        reduce using rule 1 (empty -> .)
    END             reduce using rule 1 (empty -> .)
    IDENTIFIER      shift and go to state 58

    Synchronization                shift and go to state 55
    MacroEventDefinition           shift and go to state 56
    EventIdentifierInSynchronization shift and go to state 57
    SynchronizationStar            shift and go to state 59
    empty                          shift and go to state 60

state 40

    (36) EventIdentifierInBlock -> IDENTIFIER .

    VIRGULE         reduce using rule 36 (EventIdentifierInBlock -> IDENTIFIER .)
    SYNCHRONIZATION reduce using rule 36 (EventIdentifierInBlock -> IDENTIFIER .)


state 41

    (33) EventClauseInBlock -> EVENT EventIdentifierInBlock . EventVirguleIdentifierStarInBlock
    (34) EventVirguleIdentifierStarInBlock -> . empty
    (35) EventVirguleIdentifierStarInBlock -> . VIRGULE EventIdentifierInBlock EventVirguleIdentifierStarInBlock
    (1) empty -> .

    VIRGULE         shift and go to state 62
    SYNCHRONIZATION reduce using rule 1 (empty -> .)

    EventVirguleIdentifierStarInBlock shift and go to state 61
    empty                          shift and go to state 63

state 42

    (30) TransitionClause -> TRANSITION . TransitionStar
    (28) TransitionStar -> . empty
    (29) TransitionStar -> . Transition TransitionStar
    (1) empty -> .
    (24) Transition -> . EventIdentifierInTransition DEUXPOINTS OriginalStateIdentifierInTransition FLECHE DestStateIdentifierInTransition
    (27) EventIdentifierInTransition -> . IDENTIFIER

    OBSERVER        reduce using rule 1 (empty -> .)
    END             reduce using rule 1 (empty -> .)
    IDENTIFIER      shift and go to state 66
